<resources>
    <string name="app_name">bekup1Project</string>

    <!-- Strings related to login -->
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_countrycode">Code</string>
    <string name="prompt_number">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
